styled signup form

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ SERV_PORT=3000
 MONGO_URI = 'mongodb+srv://ninaskyttis:root@whiskr.emrebg7.mongodb.net/'
 
 # MONGO_URI = 'mongodb+srv://catAdopt123:catAdopt-123@cluster0.3gimbgr.mongodb.net/'
-
+CLIENT_ID = "1079671404261-jp1egqad4jak3pgj3l53cemqb1inqbj9.apps.googleusercontent.com"
 
 #BCRYPT salt work factor
 SALT_WORK_FACTOR=10
