--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.56.0",
     "express": "^4.18.2",
     "html-webpack-plugin": "^5.6.0",
     "jwt-decode": "^4.0.0",
@@ -43,8 +44,8 @@
     "react-tinder-card": "^1.6.4",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
-    "webpack-node-externals": "^3.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
